--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "css-loader": "^7.1.2",
     "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.2",
     "live-server": "^1.2.2",
     "localforage": "^1.10.0",
     "node-sass-install": "^1.0.2",
@@ -27,6 +30,7 @@
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
     "validator": "^13.12.0",
+    "web-vitals": "^4.2.0",
     "webpack-dev-server": "^5.0.4"
   },
   "devDependencies": {
